- BUG: The log dialog was always started from the repobrowser
       at HEAD revision instead of the selected revision. (Stefan)
- BUG: Wrong rendering/resizing of the listview in the folder
       browser dialog when exporting. (Stefan)
- BUG: The number of selected items was shown wrong in the commit dialog
       if an unversioned or deleted item was checked. (Stefan)

Version 1.2

Please first look at the release notes:
http://tortoisesvn.tigris.org/tsvn_1.2_releasenotes.html

- NEW: New commands to lock/unlock files. (Stefan)
- NEW: Locked files are listed in the commit dialog so the user
       won't forget to unlock them again. (Stefan)
- NEW: Filter for the log dialog. (Stefan)
- NEW: The three parts (log list, message, change-files-list) in the
       log dialog can now be individually resized. (Stefan)
- NEW: Files not part of the selected file/folder are shown grayed out
       in the log dialogs changed-file-list. (Stefan)
- NEW: New, much improved overlay cache. (Will Dean, Stefan)
- NEW: Option to resolve a conflicted file in the status list control. (Stefan)
- NEW: TortoiseSVN now uses its own sound files for errors, warnings
       and notifications in the progress dialog. (Stefan)
- NEW: Allow diffing of renamed/copied files in the log dialog. (George Wieggers)
- NEW: A website link starting with "tsvn:" starts TortoiseSVN with the
       checkout dialog. A link starting with "svn:" will start the
       repository browser. (Stefan)
- NEW: TortoiseMerge can ignore case-only changes when diffing. (Stefan)
- NEW: Autocompletion for language-dependent keywords (usually class/method/
       variable names) in the commit dialog. (Stefan)
- NEW: Bugtracking integration extended with regular expressions. (Stefan)
- NEW: The autocompletion feature can be deactivated in the settings. (Stefan)
- NEW: Paths are checked if they're valid on Windows and an error/warning
       is shown if they're not to avoid problems later. (Stefan)